# greatest

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README  README.md  example-suite.c  example.c  example_cpp.cpp  example_no_runner.c  example_no_suite.c  example_random.c  example_shuffle.c  example_trunc.c  greatest.h  greenest  package.json
cmake/: CTestConfig.cmake  Config.cmake.in  README.txt
cmake/example/: CMakeLists.txt
cmake/example_cpp/: CMakeLists.txt
cmake/greatest/: CMakeLists.txt
contrib/: Greatest.cmake  entapment  greenest  testify
contrib/cmake/: MultiCPackConfig.cmake  Welcome.txt  config.h.in
contrib/cmake/greatest/: CMakeLists.txt
example/: CMakeLists.txt
greatest/: CMakeLists.txt
